@@ -1,3 +1,3 @@
 PROJNAME=dzco
-VERSION=1.7.2
-DEPENDENCY="zeda=1.8.14;zm=1.9.2"
+VERSION=1.7.3
+DEPENDENCY="zeda=1.9.6;zm=1.9.2"
