@@ -38,8 +38,9 @@ static void *_dzSysMAFFFFromZTK(void *val, int i, void *arg, ZTK *ztk){
   return val;
 }
 
-static void _dzSysMAFFFFPrintZTK(FILE *fp, int i, void *prp){
+static bool _dzSysMAFFFFPrintZTK(FILE *fp, int i, void *prp){
   fprintf( fp, "%.10g\n", __dz_sys_maf_ff((dzSys*)prp) );
+  return true;
 }
 
 static ZTKPrp __ztk_prp_dzsys_maf[] = {
