@@ -11,8 +11,9 @@ static void *_dzSysMIInFromZTK(void *val, int i, void *arg, ZTK *ztk){
   return val;
 }
 
-static void _dzSysMIInFPrintZTK(FILE *fp, int i, void *prp){
+static bool _dzSysMIInFPrintZTK(FILE *fp, int i, void *prp){
   fprintf( fp, "%d\n", dzSysInputNum((dzSys*)prp) );
+  return true;
 }
 
 static ZTKPrp __ztk_prp_dzsys_mi[] = {
@@ -125,11 +126,13 @@ static void *_dzSysLimitMaxFromZTK(void *val, int i, void *arg, ZTK *ztk){
   return val;
 }
 
-static void _dzSysLimitMinFPrintZTK(FILE *fp, int i, void *prp){
+static bool _dzSysLimitMinFPrintZTK(FILE *fp, int i, void *prp){
   fprintf( fp, "%.10g\n", __dz_sys_limit_min((dzSys*)prp) );
+  return true;
 }
-static void _dzSysLimitMaxFPrintZTK(FILE *fp, int i, void *prp){
+static bool _dzSysLimitMaxFPrintZTK(FILE *fp, int i, void *prp){
   fprintf( fp, "%.10g\n", __dz_sys_limit_max((dzSys*)prp) );
+  return true;
 }
 
 static ZTKPrp __ztk_prp_dzsys_limit[] = {
