@@ -212,11 +212,13 @@ static void *_dzTFGainFromZTK(void *obj, int i, void *arg, ZTK *ztk){
   return obj;
 }
 
-static void _dzTFNumFPrintZTK(FILE *fp, int i, void *prp){
+static bool _dzTFNumFPrintZTK(FILE *fp, int i, void *prp){
   zPexFPrint( fp, ((dzTF*)prp)->num );
+  return true;
 }
-static void _dzTFDenFPrintZTK(FILE *fp, int i, void *prp){
+static bool _dzTFDenFPrintZTK(FILE *fp, int i, void *prp){
   zPexFPrint( fp, ((dzTF*)prp)->den );
+  return true;
 }
 
 static ZTKPrp __ztk_prp_dztf[] = {
